--- a/Back-End/package.json
+++ b/Back-End/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node server",
-    "dev": "nodemon server"
+    "dev": "nodemon server",
+    "postinstall": "prisma generate"
   },
   "keywords": [],
   "author": "",
