--- a/Back-End/package.json
+++ b/Back-End/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
- 
+  "engines": {
+    "node": "20.x"
+  },
   "scripts": {
     "start": "node server",
     "dev": "nodemon server",
