--- a/Back-End/vercel.json
+++ b/Back-End/vercel.json
@@ -2,7 +2,7 @@
     "version":2,
     "name":"node-js",
     "builds":[
-        {"src":"server.js","use":"@vercel/node"}
+        {"src":"index.js","use":"@vercel/node"}
     ],
     "routes":[
         {"src":"/(.*)","dest":"/"}
